--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/StarFleetManager/StarFleetManager/appsettings.json
+/StarFleetManager/StarFleetManager/appsettings.Development.json
