--- a/StarFleetManager/StarFleetManager/StarFleetManager.csproj
+++ b/StarFleetManager/StarFleetManager/StarFleetManager.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\StarFleetManager.Library\StarFleetManager.Library.csproj" />
     <ProjectReference Include="..\StarFleetManager.Client\StarFleetManager.Client.csproj" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.19" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.19" />
